ci: add GH Pages deployment

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Documentation
-site_url: https://repository.cern
+site_url: https://repository.cern/docs/
 site_description: Documentation for CERN Document Server (CDS)
 site_author: CERN
 
