--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,13 +36,18 @@ jobs:
         run: uv run mkdocs build --clean --site-dir site
 
       - name: Upload Pages artifact
+        id: deployment
         uses: actions/upload-pages-artifact@v4
         with:
           path: "site"
 
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
